# gadget

./: CMakeLists.txt  README.md
include/gadget++/: button.hpp  call_chain.hpp  contact.hpp  encoder.hpp  gadget_base.hpp  led.hpp  multi_tap.hpp  ptr.hpp  rgb_led.hpp  temp.hpp  types.hpp  unique_function.hpp
lib/: button.cpp  contact.cpp  encoder.cpp  gadget_base.cpp  led.cpp  multi_tap.cpp  rgb_led.cpp  temp.cpp
